# Notification

./: .env.local  .gitignore  Dockerfile.django  Dockerfile.nginx  README.md  docker-compose.yml  pyproject.toml  ruff.toml
nginx/: nginx.conf
notification/: init_celery_schedule.py  manage.py
notification/apps/api/slack/: apps.py  urls.py  views.py
notification/apps/api/slack/services/: slack_manager.py
notification/apps/common/: admin.py  fields.py  models.py
notification/config/: gunicorn.conf.py  urls.py
notification/config/exceptions/: api_exception.py  custom_exceptions.py
notification/config/settings/: base.py  dev.py  local.py  prod.py  settings.py
notification/scripts/: celery_restart.sh  celery_start.sh  celery_stop.sh  start.sh
